--- a/html/famous.html
+++ b/html/famous.html
@@ -95,62 +95,30 @@
     <div class="tabContent bookList">
         <ul>
             <div id="menu_0" class="show">
-                <li><a href="https://www.8bei8.com/book/wenxindiaolong.html" title="《文心雕龙》">文心雕龙</a>
-                </li>
-                <li><a href="https://www.8bei8.com/book/mengzi.html" title="《孟子》">孟子</a></li>
-                <li><a href="https://www.8bei8.com/book/lunyu.html" title="《论语》">论语</a></li>
-                <li><a href="https://www.8bei8.com/book/shishuoxinyu.html" title="《世说新语》">世说新语</a>
-                </li>
-                <li><a href="https://www.8bei8.com/book/chuci.html" title="《楚辞》">楚辞</a></li>
-                <li><a href="https://www.8bei8.com/book/zhuangzi.html" title="《庄子》">庄子</a></li>
-                <li><a href="https://www.8bei8.com/book/shangshu.html" title="《尚书》">尚书</a></li>
-                <li><a href="https://www.8bei8.com/book/shijing.html" title="《诗经》">诗经</a></li>
-                <li><a href="https://www.8bei8.com/book/daxue.html" title="《大学》">大学</a></li>
-                <li><a href="https://www.8bei8.com/book/zhongyong.html" title="《中庸》">中庸</a></li>
-                <li><a href="https://www.8bei8.com/book/liji.html" title="《礼记》">礼记</a></li>
-                <li><a href="https://www.8bei8.com/book/mengxibitan.html" title="《梦溪笔谈》">梦溪笔谈</a>
-                </li>
-                <li><a href="https://www.8bei8.com/book/yuefushiji.html" title="《乐府诗集》">乐府诗集</a>
-                </li>
-                <li><a href="https://www.8bei8.com/book/xiaolinguangji.html" title="《笑林广记》">笑林广记</a>
-                </li>
-                <li><a href="https://www.8bei8.com/book/tiangongkaiwu.html" title="《天工开物》">天工开物</a>
-                </li>
-                <li><a href="https://www.8bei8.com/book/xiaojing.html" title="《孝经》">孝经</a></li>
-                <li><a href="https://www.8bei8.com/book/kongzijiayu.html" title="《孔子家语》">孔子家语</a>
-                </li>
-                <li><a href="https://www.8bei8.com/book/shuijingzhu.html" title="《水经注》">水经注</a>
-                </li>
-                <li><a href="https://www.8bei8.com/book/nongsangjiyao.html" title="《农桑辑要》">农桑辑要</a>
-                </li>
-                <li><a href="https://www.8bei8.com/book/wenchangxiaojing.html" title="《文昌孝经》">文昌孝经</a></li>
-                <li><a href="https://www.8bei8.com/book/juemiaohaoci.html" title="《绝妙好词》">绝妙好词</a>
-                </li>
-                <li><a href="https://www.8bei8.com/book/xuxiakeyouji.html" title="《徐霞客游记》">徐霞客游记</a>
-                </li>
-                <li><a href="https://www.8bei8.com/book/dizigui.html" title="《弟子规》">弟子规</a></li>
-                <li><a href="https://www.8bei8.com/book/zengguangxianwen.html" title="《增广贤文》">增广贤文</a></li>
-                <li><a href="https://www.8bei8.com/book/youxueqionglin.html" title="《幼学琼林》">幼学琼林</a>
-                </li>
-                <li><a href="https://www.8bei8.com/book/liaofansixun.html" title="《了凡四训》">了凡四训</a>
-                </li>
-                <li><a href="https://www.8bei8.com/book/caigentan.html" title="《菜根谭》">菜根谭</a>
-                </li>
-                <li><a href="https://www.8bei8.com/book/guwenguanzhi.html" title="《古文观止》">古文观止</a>
-                </li>
-                <li><a href="https://www.8bei8.com/book/rongzhaisuibi.html" title="《容斋随笔》">容斋随笔</a>
-                </li>
-                <li><a href="https://www.8bei8.com/book/weiluyehua.html" title="《围炉夜话》">围炉夜话</a>
-                </li>
-                <li><a href="https://www.8bei8.com/book/xiaochuangyouji.html" title="《小窗幽记》">小窗幽记</a>
-                </li>
-                <li><a href="https://www.8bei8.com/book/wangguoweishixuan.html" title="《王国维诗选》">王国维诗选</a></li>
-                <li><a href="https://www.8bei8.com/book/renjiancihua.html" title="《人间词话》">人间词话</a>
-                </li>
-                <li><a href="https://www.8bei8.com/book/wanyueci.html" title="《婉约词》">婉约词</a></li>
-                <li><a href="https://www.8bei8.com/book/chajing.html" title="《茶经》">茶经</a></li>
-                <li><a href="https://www.8bei8.com/book/24xiao.html" title="《二十四孝》">二十四孝</a>
-                </li>
+                <li><a href="../html/gushu/mengzi.html" title="《孟子》">孟子</a></li>
+                <li><a href="../html/gushu/lunyu.html" title="《论语》">论语</a></li>
+                <li><a href="../html/gushu/chuci.html" title="《楚辞》">楚辞</a></li>
+                <li><a href="../html/gushu/zhuangzi.html" title="《庄子》">庄子</a></li>
+                <li><a href="../html/gushu/shijing.html" title="《诗经》">诗经</a></li>
+                <li><a href="../html/gushu/daxue.html" title="《大学》">大学</a></li>
+                <li><a>文心雕龙未制作</a></li>
+                <li><a>世说新语未制作</a></li>
+                <li><a>尚书未制作</a></li>
+                <li><a>中庸未制作</a></li>
+                <li><a>礼记未制作</a></li>
+                <li><a>梦溪笔谈未制作</a></li>
+                <li><a>乐府诗集未制作</a></li>
+                <li><a>笑林广记未制作</a></li>
+                <li><a>天工开物未制作</a></li>
+                <li><a>孝经未制作</a></li>
+                <li><a>孔子家语未制作</a></li>
+                <li><a>水经注未制作</a></li>
+                <li><a>农桑辑要未制作</a></li>
+                <li><a>文昌孝经未制作</a></li>
+                <li><a>绝妙好词未制作</a></li>
+                <li><a>徐霞客游记未制作</a></li>
+                <li><a>弟子规未制作</a></li>
+                <li><a>增广贤文未制作</a></li>
             </div>
         </ul>
     </div>
