--- a/html/hot.html
+++ b/html/hot.html
@@ -29,19 +29,23 @@
 <div class="row">
     <div>
         <ul class="sidemenu">
-            <li><a class="active" href="to live.html">《活着》</a></li>
-            <li><a href="blood.html">《许三观卖血记》</a></li>
-            <li><a href="zi.html">《骆驼祥子》</a></li>
-            <li><a href="santi.html">《三体》</a></li>
-            <li><a href="fire.html">《冰与火之歌》</a></li>
+            <li><a class="active" href="hot/to live.html">《活着》</a></li>
+            <li><a href="hot/blood.html">《许三观卖血记》</a></li>
+            <li><a href="hot/zi.html">《骆驼祥子》</a></li>
+            <li><a href="hot/santi.html">《三体》</a></li>
+            <li><a href="hot/fire.html">《冰与火之歌》</a></li>
+            <li><a href="hot/people.html">《人间失格》</a></li>
+            <li><a href="hot/year.html">《百年孤独》</a></li>
+            <li><a href="hot/moon.html">《月亮与六便士》</a></li>
+            <li><a href="hot/older.html">《老人与海》</a></li>
         </ul>
     </div>
     <div class="content">
         <!--书籍-->
         <h1>
-                <span property="v:itemreviewed">
-                    <a class="" href="https://cread.jd.com/read/startRead.action?bookId=30286863&readType=1"
-                       style="text-decoration:none" target="_blank">活着</a>
+                <span>
+                    <ahref="https://cread.jd.com/read/startRead.action?bookId=30286863&readType=1"
+                        style="text-decoration:none" target="_blank">活着</a>
                 </span>
         </h1>
         <!--书籍封面图片-->
@@ -52,7 +56,6 @@
         <!--书籍详细简介-->
         <span>
                 <span class="pl"> 作者</span>:
-
                 <a class=""
                    href="https://baike.baidu.com/item/%E4%BD%99%E5%8D%8E/6935?fromModule=lemma_search-box">余华</a>
             </span><br>
