--- a/html/Wuxia.html
+++ b/html/Wuxia.html
@@ -23,13 +23,131 @@
     <li><a href="../html/hist.html">历史专区</a></li>
     <li><a href="../html/sci.html">科幻专区</a></li>
     <li><a href="../html/fantasy.html">奇幻专区</a></li>
-    <li><a href="../html/classify.html">作品分类</a></li>
-</ul>
-<a>这是一个未完成的项目</a>
 
+</ul>
+
+<div class="clean">
+    <table border="0" align="center">
+        <tbody>
+        <tr>
+            <td><br/></td>
+        </tr>
+        <tr align="center">
+            <td><img src="../image/飞.jpg" width="130" height="200" alt=""><br/>
+                <a href="https://baike.baidu.com/item/%E9%A3%9E%E7%8B%90%E5%A4%96%E4%BC%A0/13052?fromModule=lemma_inlink"
+                   target="_blank">飞狐外传</a><br/>金庸
+            </td>
+            <td>&nbsp;&nbsp;&nbsp;&nbsp;</td>
+            <td><img src="../image/雪.jpg" width="130" height="200" alt=""><br/>
+                <a href="https://baike.baidu.com/item/%E9%9B%AA%E5%B1%B1%E9%A3%9E%E7%8B%90/12998?fromModule=lemma_inlink"
+                   target="_blank">雪山飞狐</a><br/>金庸
+            </td>
+            <td>&nbsp;&nbsp;&nbsp;&nbsp;</td>
+            <td><img src="../image/连.jpg" width="130" height="200" alt=""><br/>
+                <a href="https://baike.baidu.com/item/%E8%BF%9E%E5%9F%8E%E8%AF%80/11557?fromModule=lemma_inlink"
+                   target="_blank">连城诀</a><br/>金庸
+            </td>
+            <td>&nbsp;&nbsp;&nbsp;&nbsp;</td>
+            <td><img src="../image/天.jpg" width="130" height="200" alt=""><br/>
+                <a href="https://baike.baidu.com/item/%E5%A4%A9%E9%BE%99%E5%85%AB%E9%83%A8/5480052?fromModule=lemma_search-box"
+                   target="_blank">天龙八部</a><br/>金庸
+            </td>
+            <td>&nbsp;&nbsp;&nbsp;&nbsp;</td>
+            <td><img src="../image/射.jpg" width="130" height="200" alt=""><br/>
+                <a href="https://baike.baidu.com/item/%E5%B0%84%E9%9B%95%E8%8B%B1%E9%9B%84%E4%BC%A0/5678?fromModule=lemma_inlink"
+                   target="_blank">射雕英雄传</a><br/>金庸
+            </td>
+            <td>&nbsp;&nbsp;&nbsp;&nbsp;</td>
+            <td><img src="../image/白.jpg" width="130" height="200" alt=""><br/>
+                <a href="https://baike.baidu.com/item/%E7%99%BD%E9%A9%AC%E5%95%B8%E8%A5%BF%E9%A3%8E/274630?fromModule=lemma_inlink"
+                   target="_blank">白马啸西风</a><br/>金庸
+            </td>
+            <td>&nbsp;&nbsp;&nbsp;&nbsp;</td>
+            <td><img src="../image/鹿.jpg" width="130" height="200" alt=""><br/>
+                <a href="https://baike.baidu.com/item/%E9%B9%BF%E9%BC%8E%E8%AE%B0/13719?fromModule=lemma_inlink"
+                   target="_blank">鹿鼎记</a><br/>金庸
+            </td>
+            <td>&nbsp;&nbsp;&nbsp;&nbsp;</td>
+        </tr>
+        <tr>
+            <td><br/></td>
+        </tr>
+        <tr align="center">
+            <td><img src="../image/笑.jpg" width="130" height="200" alt=""><br/>
+                <a href="https://baike.baidu.com/item/%E7%AC%91%E5%82%B2%E6%B1%9F%E6%B9%96/13116?fromModule=lemma_inlink"
+                   target="_blank">笑傲江湖</a><br/>金庸
+            </td>
+            <td>&nbsp;&nbsp;&nbsp;&nbsp;</td>
+            <td><img src="../image/书.jpg" width="130" height="200" alt=""><br/>
+                <a href="https://baike.baidu.com/item/%E4%B9%A6%E5%89%91%E6%81%A9%E4%BB%87%E5%BD%95/12689?fromModule=lemma_inlink"
+                   target="_blank">书剑恩仇录</a><br/>金庸
+            </td>
+            <td>&nbsp;&nbsp;&nbsp;&nbsp;</td>
+            <td><img src="../image/神.jpg" width="130" height="200" alt=""><br/>
+                <a href="https://baike.baidu.com/item/%E7%A5%9E%E9%9B%95%E4%BE%A0%E4%BE%A3/5682?fromModule=lemma_inlink"
+                   target="_blank">神雕侠侣</a><br/>金庸
+            </td>
+            <td>&nbsp;&nbsp;&nbsp;&nbsp;</td>
+            <td><img src="../image/侠.jpg" width="130" height="200" alt=""><br/>
+                <a href="https://baike.baidu.com/item/%E4%BE%A0%E5%AE%A2%E8%A1%8C/7680649?fromModule=lemma_inlink"
+                   target="_blank">侠客行</a><br/>金庸
+            </td>
+            <td>&nbsp;&nbsp;&nbsp;&nbsp;</td>
+            <td><img src="../image/倚.jpg" width="130" height="200" alt=""><br/>
+                <a href="https://baike.baidu.com/item/%E5%80%9A%E5%A4%A9%E5%B1%A0%E9%BE%99%E8%AE%B0/5683?fromModule=lemma_inlink"
+                   target="_blank">倚天屠龙记</a><br/>金庸
+            </td>
+            <td>&nbsp;&nbsp;&nbsp;&nbsp;</td>
+            <td><img src="../image/碧.jpg" width="130" height="200" alt=""><br/>
+                <a
+                        href="https://baike.baidu.com/item/%E7%A2%A7%E8%A1%80%E5%89%91/9351?fromModule=lemma_inlink">碧血剑</a><br/>金庸
+            </td>
+            <td>&nbsp;&nbsp;&nbsp;&nbsp;</td>
+            <td><img src="../image/鸳.jpg" width="130" height="200" alt=""><br/>
+                <a
+                        href="https://baike.baidu.com/item/%E9%B8%B3%E9%B8%AF%E5%88%80/7555937?fromModule=lemma_inlink">鸳鸯刀</a><br/>金庸
+            </td>
+            <td>&nbsp;&nbsp;&nbsp;&nbsp;</td>
+        </tr>
+        <tr align="center">
+            <td><img src="../image/w1.jpg" width="130" height="200" alt=""><br/>
+                <a href="">刀背藏身</a><br/>徐皓峰
+            </td>
+            <td>&nbsp;&nbsp;&nbsp;&nbsp;</td>
+            <td><img src="../image/w2.jpg" width="130" height="200" alt=""><br/>
+                <a href="">楚留香传奇</a><br/>古龙
+            </td>
+            <td>&nbsp;&nbsp;&nbsp;&nbsp;</td>
+            <td><img src="../image/w3.jpg" width="130" height="200" alt=""><br/>
+                <a href="">陆小凤传奇</a><br/>古龙
+            </td>
+            <td>&nbsp;&nbsp;&nbsp;&nbsp;</td>
+            <td><img src="../image/w4.jpg" width="130" height="200" alt=""><br/>
+                <a href="">论剑</a><br/>叶洪生
+            </td>
+            <td>&nbsp;&nbsp;&nbsp;&nbsp;</td>
+            <td><img src="../image/w5.jpg" width="130" height="200" alt=""><br/>
+                <a href="">三少爷的剑</a><br/>古龙
+            </td>
+            <td>&nbsp;&nbsp;&nbsp;&nbsp;</td>
+            <td><img src="../image/w6.jpg" width="130" height="200" alt=""><br/>
+                <a href="">天涯明月刀</a><br/>古龙
+            </td>
+            <td>&nbsp;&nbsp;&nbsp;&nbsp;</td>
+            <td><img src="../image/w7.jpg" width="130" height="200" alt=""><br/>
+                <a href="">侠客</a><br/>刘丽娟
+            </td>
+            <td>&nbsp;&nbsp;&nbsp;&nbsp;</td>
+        </tr>
+        </tbody>
+    </table>
+</div>
 <!-- 底部栏 -->
 <div class="footer">
     <h2>
         M36 文学网 Literature|Cultivate|Learn
     </h2>
 </div>
+</body>
+
+</html>
