--- a/html/fantasy.html
+++ b/html/fantasy.html
@@ -23,10 +23,71 @@
     <li><a href="../html/hist.html">历史专区</a></li>
     <li><a href="../html/sci.html">科幻专区</a></li>
     <li><a class="active" href="../html/fantasy.html">奇幻专区</a></li>
-    <li><a href="../html/classify.html">作品分类</a></li>
-</ul>
-<a>这是一个未完成的项目</a>
 
+</ul>
+<hr color="white">
+<div class="row">
+    <div>
+        <ul class="sidemenu">
+            <li><a class="active" href="fantasy.html">《魔戒》</a></li>
+            <li><a href="fantasy/magic.html">《哈利·波特》</a></li>
+        </ul>
+    </div>
+    <div class="content">
+        <!--书籍-->
+        <h1>
+                <span>
+                    <a>魔戒</a>
+                </span>
+        </h1>
+        <!--书籍封面图片-->
+        <div>
+            <img src="../image/lord.jpg" alt="魔戒" style="max-width: 135px;max-height: 200px;">
+            </a>
+        </div>
+        <!--书籍详细简介-->
+        <span>
+                <span class="pl"> 作者</span>:
+                <a>J.R.R.托尔金</a>
+            </span><br>
+        <span class="pl">出版社:</span>
+        <a>上海人民出版社</a>
+        <br>
+        <span class="pl">出品方:</span>
+        <a>世纪文景</a>
+        <br>
+        <span class="pl">出版年:</span>2013-9<br>
+        <span class="pl">页数:</span> 1500<br>
+        <span class="pl">装帧:</span> 平装<br>
+        <span class="pl">丛书:</span>&nbsp;<a>托尔金在文景</a><br>
+        <span class="pl">ISBN:</span> 9787208113039<br>
+        <div>
+            <h2>
+                <span>内容简介</span>
+                &nbsp;·&nbsp;·&nbsp;·&nbsp;·&nbsp;·&nbsp;·
+            </h2>
+            <p>
+                至尊魔戒，拥有统御众戒、奴役世界的力量，黑暗魔君索隆苦觅已久。为了守护家园，魔戒继承人弗罗多毅然离开宁谧淳朴的夏尔，踏上前途未卜的旅途。与他同行的是睿智的巫师、勇敢的人类、美善的精灵、坚毅的矮人和热爱和平的霍比特人。征途见证了勇气与友谊。跃马客栈里的重重暗影，卡扎督姆桥的怒吼炎魔，勇猛骁勇的洛汗骠骑，范贡森林的上古树须，凄厉嘶嚎的邪恶戒灵，陡峭山壁旁的巨型毒蛛……每个人各自抵御着无尽的诱惑与磨难，承担起属于自己的善恶考验。
+            </p>
+            <p>
+                平凡的霍比特人战栗在末日烈焰面前，他能战胜这噬灭灵魂的至尊魔戒吗？
+                全书共三部：《魔戒同盟》《双塔殊途》《王者归来》。
+            </p>
+            <h2>
+                <span>作者简介</span>
+                &nbsp;·&nbsp;·&nbsp;·&nbsp;·&nbsp;·&nbsp;·
+            </h2>
+            <p>
+                J.R.R. 托尔金（J.R.R. Tolkien）
+
+                英国文豪，天才的语言学家，生于1892年1月3日，1925年开始担任牛津大学教授。他创作了一系列脍炙人口的中洲世界史诗，影响最为深远的是《霍比特人》和《魔戒》。这两部巨作被誉为当代奇幻作品的鼻祖。1972年3
+                月28日，托尔金获英国女王伊丽莎白二世颁发的大英帝国指挥官勋章。
+
+                托尔金于1973年9月2日在牛津逝世。托尔金死后，其作品声名未减，至今全球已畅销2.5亿余册，《魔戒》在英国Waterstones书店和第四频道合办的票选活动中被选为20世纪之书，被亚马逊网络书店票选为两千年以来最重要的书。
+            </p>
+        </div>
+    </div>
+</div>
 <!-- 底部栏 -->
 <div class="footer">
     <h2>
