--- a/html/foreign.html
+++ b/html/foreign.html
@@ -23,13 +23,78 @@
     <li><a href="../html/hist.html">历史专区</a></li>
     <li><a href="../html/sci.html">科幻专区</a></li>
     <li><a href="../html/fantasy.html">奇幻专区</a></li>
-    <li><a href="../html/classify.html">作品分类</a></li>
-</ul>
-<a>这是一个未完成的项目</a>
 
+</ul>
+<div class="clean">
+    <table border="0" align="center">
+        <tbody>
+        <tr>
+            <td><br/></td>
+        </tr>
+        <tr align="center">
+            <td><img src="../image/f1.jpg" width="130" height="200" alt=""><br/>
+                <a href="https://book.douban.com/" target="_blank">悲惨世界</a><br/>雨果
+            </td>
+            <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
+            <td><img src="../image/f2.jpg" width="130" height="200" alt=""><br/>
+                <a href="https://book.douban.com/" target="_blank">变形记</a><br/>卡夫卡
+            </td>
+            <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
+            <td><img src="../image/f3.jpg" width="130" height="200" alt=""><br/>
+                <a href="https://book.douban.com/" target="_blank">复活</a><br/>列夫托尔斯泰
+            </td>
+            <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
+            <td><img src="../image/f4.jpg" width="130" height="200" alt=""><br/>
+                <a href="https://book.douban.com/" target="_blank">哈姆雷特</a><br/>莎士比亚
+            </td>
+            <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
+            <td><img src="../image/f5.jpg" width="130" height="200" alt=""><br/>
+                <a href="https://book.douban.com/" target="_blank">黑珍珠</a><br/>奥台尔
+            </td>
+            <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
+            <td><img src="../image/f6.jpg" width="130" height="200" alt=""><br/>
+                <a href="https://book.douban.com/" target="_blank">神曲</a><br/>阿利盖利
+            </td>
+            <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
+        </tr>
+        <tr>
+            <td><br/></td>
+        </tr>
+        <tr align="center">
+            <td><img src="../image/f7.jpg" width="130" height="200" alt=""><br/>
+                <a href="https://book.douban.com/" target="_blank">十日谈</a><br/>乔万尼
+            </td>
+            <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
+            <td><img src="../image/f8.jpg" width="130" height="200" alt=""><br/>
+                <a href="https://book.douban.com/" target="_blank">黑骏马</a><br/>塞维尔
+            </td>
+            <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
+            <td><img src="../image/f9.jpg" width="130" height="200" alt=""><br/>
+                <a href="https://book.douban.com/" target="_blank">基督山伯爵</a><br/>大仲马
+            </td>
+            <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
+            <td><img src="../image/f10.jpg" width="130" height="200" alt=""><br/>
+                <a href="https://book.douban.com/" target="_blank">长袜子皮皮</a><br/>林格伦
+            </td>
+            <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
+            <td><img src="../image/f11.jpg" width="130" height="200" alt=""><br/>
+                <a href="https://book.douban.com/" target="_blank">小公主</a><br/>伯内特
+            </td>
+            <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
+            <td><img src="../image/f12.jpg" width="130" height="200" alt=""><br/>
+                <a href="https://book.douban.com/" target="_blank">简爱</a><br/>勃朗特
+            </td>
+            <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
+        </tr>
+        </tbody>
+    </table>
+</div>
 <!-- 底部栏 -->
 <div class="footer">
     <h2>
         M36 文学网 Literature|Cultivate|Learn
     </h2>
 </div>
+</body>
+
+</html>
