--- a/html/hist.html
+++ b/html/hist.html
@@ -23,9 +23,64 @@
     <li><a class="active" href="../html/hist.html">历史专区</a></li>
     <li><a href="../html/sci.html">科幻专区</a></li>
     <li><a href="../html/fantasy.html">奇幻专区</a></li>
-    <li><a href="../html/classify.html">作品分类</a></li>
+
 </ul>
-<a>这是一个未完成的项目</a>
+<div class="clean">
+    <table border="0" align="center">
+        <tbody>
+        <tr>
+            <td><br/></td>
+        </tr>
+        <tr align="center">
+            <td><img src="../image/帝国的分裂 郑非.jpg" width="130" height="200" alt=""><br/>
+                <a href="https://book.douban.com/" target="_blank">帝国的分裂</a><br/>郑非
+            </td>
+            <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
+            <td><img src="../image/巨人的陨落 福莱特.jpg" width="130" height="200" alt=""><br/>
+                <a href="https://book.douban.com/" target="_blank">巨人的陨落</a><br/>福莱特
+            </td>
+            <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
+            <td><img src="../image/美国的伤痕 霍克.jpg" width="130" height="200" alt=""><br/>
+                <a href="https://book.douban.com/" target="_blank">美国的伤痕</a><br/>霍克
+            </td>
+            <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
+            <td><img src="../image/美国独立战争简史  康威.jpg" width="130" height="200" alt=""><br/>
+                <a href="https://book.douban.com/" target="_blank">美国独立战争简史</a><br/>康威
+            </td>
+            <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
+            <td><img src="../image/si.jpg" width="130" height="200" alt=""><br/>
+                <a href="https://book.douban.com/subject/26853835/" target="_blank">丝绸之路</a><br/>彼得·弗兰科潘
+            </td>
+            <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
+        </tr>
+        <tr>
+            <td><br/></td>
+        </tr>
+        <tr align="center">
+            <td><img src="../image/儒法国家 赵鼎新.jpg" width="130" height="200" alt=""><br/>
+                <a href="https://book.douban.com/" target="_blank">儒法国家</a><br/>赵鼎新
+            </td>
+            <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
+            <td><img src="../image/圣殿春秋 福莱特.jpg" width="130" height="200" alt=""><br/>
+                <a href="https://book.douban.com/" target="_blank">圣殿春秋</a><br/>福莱特
+            </td>
+            <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
+            <td><img src="../image/统一与分裂 葛剑雄.jpg" width="130" height="200" alt=""><br/>
+                <a href="https://book.douban.com/" target="_blank">统一与分裂</a><br/>葛剑雄
+            </td>
+            <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
+            <td><img src="../image/重铸大英帝国   亚当斯.jpg" width="130" height="200" alt=""><br/>
+                <a href="https://book.douban.com/" target="_blank">重铸大英帝国</a><br/>亚当斯
+            </td>
+            <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
+            <td><img src="../image/ming.jpg" width="130" height="200" alt=""><br/>
+                <a href="https://book.douban.com/subject/3674537/" target="_blank">明朝那些事</a><br/>当年明月
+            </td>
+            <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
+        </tr>
+        </tbody>
+    </table>
+</div>
 
 <!-- 底部栏 -->
 <div class="footer">
@@ -33,3 +88,6 @@
         M36 文学网 Literature|Cultivate|Learn
     </h2>
 </div>
+</body>
+
+</html>
