--- a/html/hot/fire.html
+++ b/html/hot/fire.html
@@ -23,7 +23,7 @@
     <li><a href="../../html/hist.html">历史专区</a></li>
     <li><a href="../../html/sci.html">科幻专区</a></li>
     <li><a href="../../html/fantasy.html">奇幻专区</a></li>
-    <li><a href="../../html/classify.html">作品分类</a></li>
+
 </ul>
 <hr color="white">
 <div class="row">
@@ -57,7 +57,9 @@
             <div>
                     <span>
                         <span class="pl"> 作者</span>:
-                        <a class="" href="/author/4612666">乔治·马丁</a>
+                        <a class=""
+                           href="https://baike.baidu.com/item/%E4%B9%94%E6%B2%BB%C2%B7%E9%9B%B7%E8%92%99%E5%BE%B7%C2%B7%E7%90%86%E6%9F%A5%E5%BE%B7%C2%B7%E9%A9%AC%E4%B8%81/19784177"
+                           style="text-decoration:none" target="_blank">乔治·马丁</a>
                     </span><br>
                 <span class="pl">出版社:</span>
                 <a>重庆出版社</a>
