--- a/html/hot/moon.html
+++ b/html/hot/moon.html
@@ -23,7 +23,7 @@
     <li><a href="../../html/hist.html">历史专区</a></li>
     <li><a href="../../html/sci.html">科幻专区</a></li>
     <li><a href="../../html/fantasy.html">奇幻专区</a></li>
-    <li><a href="../../html/classify.html">作品分类</a></li>
+
 </ul>
 <hr color="white">
 <div class="row">
@@ -57,7 +57,7 @@
         <span>
                 <span class="pl"> 作者</span>:
                 <a href="https://baike.baidu.com/item/%E5%A8%81%E5%BB%89%C2%B7%E8%90%A8%E9%BB%98%E5%A1%9E%E7%89%B9%C2%B7%E6%AF%9B%E5%A7%86/11019590"
-                   target="_blank"> [英]毛姆</a>
+                   style="text-decoration:none" target="_blank"> [英]毛姆</a>
             </span><br>
         <span class="pl">出版社:</span>
         <a> 上海译文出版社</a>
