--- a/html/hot/older.html
+++ b/html/hot/older.html
@@ -23,7 +23,7 @@
     <li><a href="../../html/hist.html">历史专区</a></li>
     <li><a href="../../html/sci.html">科幻专区</a></li>
     <li><a href="../../html/fantasy.html">奇幻专区</a></li>
-    <li><a href="../../html/classify.html">作品分类</a></li>
+
 </ul>
 <hr color="white">
 <div class="row">
@@ -45,8 +45,8 @@
         <!--书籍-->
         <h1>
                 <span>
-                    <a href="https://weread.qq.com/web/reader/f7532c105e3954f759c4be6"
-                       style="text-decoration:none" target="_blank">老人与海</a>
+                    <a href="https://weread.qq.com/web/reader/f7532c105e3954f759c4be6" style="text-decoration:none"
+                       target="_blank">老人与海</a>
                 </span>
         </h1>
         <!--书籍封面图片-->
@@ -58,7 +58,7 @@
         <span>
                 <span class="pl"> 作者</span>:
                 <a href="https://baike.baidu.com/item/%E6%AC%A7%E5%86%85%E6%96%AF%E7%89%B9%C2%B7%E7%B1%B3%E5%8B%92%E5%B0%94%C2%B7%E6%B5%B7%E6%98%8E%E5%A8%81/35196"
-                   target="_blank">[美]
+                   style="text-decoration:none" target="_blank">[美]
                     欧内斯特·海明威</a>
             </span><br>
         <span class="pl">出版社:</span>
