--- a/html/hot/people.html
+++ b/html/hot/people.html
@@ -10,7 +10,6 @@
 
 <body>
 <div class="header"><a href="../../index.html" title="返回首页"><img alt="" src="../image/"></a></div>
-
 <ul class="topmenu">
     <li>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
         &nbsp;
@@ -23,8 +22,9 @@
     <li><a href="../../html/hist.html">历史专区</a></li>
     <li><a href="../../html/sci.html">科幻专区</a></li>
     <li><a href="../../html/fantasy.html">奇幻专区</a></li>
-    <li><a href="../../html/classify.html">作品分类</a></li>
+
 </ul>
+</div>
 <hr color="white">
 <div class="row">
     <div>
@@ -56,7 +56,8 @@
         <!--书籍详细简介-->
         <span>
                 <span class="pl"> 作者</span>:
-                <a href="https://baike.baidu.com/item/%E5%A4%AA%E5%AE%B0%E6%B2%BB/5426741">太宰治</a>
+                <a href="https://baike.baidu.com/item/%E5%A4%AA%E5%AE%B0%E6%B2%BB/5426741" style="text-decoration:none"
+                   target="_blank">太宰治</a>
             </span><br>
         <span class="pl">出版社:</span>
         <a>吉林出版集团</a>
@@ -91,14 +92,13 @@
             </p>
         </div>
     </div>
-</div>
 
-<!-- 底部栏 -->
-<div class="footer">
-    <h2>
-        M36 文学网 Literature|Cultivate|Learn
-    </h2>
-</div>
+    <!-- 底部栏 -->
+    <div class="footer">
+        <h2>
+            M36 文学网 Literature|Cultivate|Learn
+        </h2>
+    </div>
 </body>
 
 </html>
