--- a/html/hot/to live.html
+++ b/html/hot/to live.html
@@ -23,7 +23,7 @@
     <li><a href="../../html/hist.html">历史专区</a></li>
     <li><a href="../../html/sci.html">科幻专区</a></li>
     <li><a href="../../html/fantasy.html">奇幻专区</a></li>
-    <li><a href="../../html/classify.html">作品分类</a></li>
+
 </ul>
 <hr color="white">
 <div class="row">
@@ -56,7 +56,8 @@
         <!--书籍详细简介-->
         <span>
                 <span class="pl"> 作者</span>:
-                <a href="https://baike.baidu.com/item/%E4%BD%99%E5%8D%8E/6935?fromModule=lemma_search-box">余华</a>
+                <a href="https://baike.baidu.com/item/%E4%BD%99%E5%8D%8E/6935?fromModule=lemma_search-box"
+                   style="text-decoration:none">余华</a>
             </span><br>
         <span class="pl">出版社:</span>
         <a>北京十月文艺出版社</a>
