--- a/html/hot/year.html
+++ b/html/hot/year.html
@@ -23,7 +23,7 @@
     <li><a href="../../html/hist.html">历史专区</a></li>
     <li><a href="../../html/sci.html">科幻专区</a></li>
     <li><a href="../../html/fantasy.html">奇幻专区</a></li>
-    <li><a href="../../html/classify.html">作品分类</a></li>
+
 </ul>
 <hr color="white">
 <div class="row">
@@ -56,9 +56,8 @@
         <!--书籍详细简介-->
         <span>
                 <span class="pl"> 作者</span>:
-                <a
-                        href="https://baike.baidu.com/item/%E5%8A%A0%E5%A4%AB%E5%88%97%E5%B0%94%C2%B7%E5%8A%A0%E8%A5%BF%E4%BA%9A%C2%B7%E9%A9%AC%E5%B0%94%E5%85%8B%E6%96%AF?fromtitle=%E5%8A%A0%E8%A5%BF%E4%BA%9A%C2%B7%E9%A9%AC%E5%B0%94%E5%85%8B%E6%96%AF&fromid=691007&fromModule=lemma_search-box"
-                        target="_blank">
+                <a href="https://baike.baidu.com/item/%E5%8A%A0%E5%A4%AB%E5%88%97%E5%B0%94%C2%B7%E5%8A%A0%E8%A5%BF%E4%BA%9A%C2%B7%E9%A9%AC%E5%B0%94%E5%85%8B%E6%96%AF?fromtitle=%E5%8A%A0%E8%A5%BF%E4%BA%9A%C2%B7%E9%A9%AC%E5%B0%94%E5%85%8B%E6%96%AF&fromid=691007&fromModule=lemma_search-box"
+                   style="text-decoration:none" target="_blank">
                     [哥伦比亚] 加西亚·马尔克斯</a>
             </span><br>
         <span class="pl">出版社:</span>
