--- a/html/hot/zi.html
+++ b/html/hot/zi.html
@@ -23,7 +23,7 @@
     <li><a href="../../html/hist.html">历史专区</a></li>
     <li><a href="../../html/sci.html">科幻专区</a></li>
     <li><a href="../../html/fantasy.html">奇幻专区</a></li>
-    <li><a href="../../html/classify.html">作品分类</a></li>
+
 </ul>
 <hr color="white">
 <div class="row">
@@ -45,7 +45,7 @@
         <h1>
                 <span>
                     <a href="https://weread.qq.com/web/reader/fd1328207268785dfd1479dk16732dc0161679091c5aeb1"
-                       target="_blank">骆驼祥子</a>
+                       style="text-decoration:none" target="_blank">骆驼祥子</a>
                 </span>
         </h1>
         <!--书籍图片-->
@@ -59,7 +59,8 @@
             <div>
                     <span>
                         <span class="pl"> 作者</span>:
-                        <a href="https://baike.baidu.com/item/%E8%80%81%E8%88%8D/193756" target="_blank">老舍</a>
+                        <a href="https://baike.baidu.com/item/%E8%80%81%E8%88%8D/193756" style="text-decoration:none"
+                           target="_blank">老舍</a>
                     </span><br>
                 <span class="pl">出版社:</span>
                 <a>南海出版公司</a>
