--- a/html/sci.html
+++ b/html/sci.html
@@ -23,10 +23,65 @@
     <li><a href="../html/hist.html">历史专区</a></li>
     <li><a class="active" href="../html/sci.html">科幻专区</a></li>
     <li><a href="../html/fantasy.html">奇幻专区</a></li>
-    <li><a href="../html/classify.html">作品分类</a></li>
-</ul>
-<a>这是一个未完成的项目</a>
 
+</ul>
+<div class="clean">
+    <table border="0" align="center">
+        <tbody>
+        <tr>
+            <td><br/></td>
+        </tr>
+        <tr align="center">
+            <td><img src="../image/wanjiu.jpg" width="130" height="200" alt=""><br/>
+                <a href="https://book.douban.com/subject/35494160/" target="_blank">挽救计划</a><br/>安迪·威尔
+            </td>
+            <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
+            <td><img src="../image/sheep.jpg" width="130" height="200" alt=""><br/>
+                <a href="https://book.douban.com/subject/27041533/" target="_blank">仿生人会梦见电子羊吗？</a><br/>菲利普·迪克
+            </td>
+            <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
+            <td><img src="../image/2001.jpg" width="130" height="200" alt=""><br/>
+                <a href="https://book.douban.com/subject/30471298/" target="_blank">2001：太空漫游</a><br/>阿瑟·克拉克
+            </td>
+            <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
+            <td><img src="../image/space.jpg" width="130" height="200" alt=""><br/>
+                <a href="https://book.douban.com/subject/26389900/" target="_blank">银河帝国(全集)</a><br/>艾萨克·阿西莫夫
+            </td>
+            <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
+            <td><img src="../image/star.jpg" width="130" height="200" alt=""><br/>
+                <a
+                        href="https://book.douban.com/subject/35271451/" target="_blank">星之继承者</a><br/>詹姆斯·P.霍根
+            <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
+        </tr>
+        <tr>
+            <td><br/></td>
+        </tr>
+        <tr align="center">
+            <td><img src="../image/down.jpg" width="130" height="200" alt=""><br/>
+                <a href="https://book.douban.com/subject/1085470/" target="_blank">海底两万里</a><br/> 儒尔·凡尔纳
+            </td>
+            <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
+            <td><img src="../image/1984.jpg" width="130" height="200" alt=""><br/>
+                <a href="https://book.douban.com/subject/4820710/" target="_blank">1984</a><br/>乔治·奥威尔
+            </td>
+            <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
+            <td><img src="../image/shazi.jpg" width="130" height="200" alt=""><br/>
+                <a href="https://book.douban.com/subject/26836970/" target="_blank">沙丘</a><br/>弗兰克·赫伯特
+            </td>
+
+            <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
+            <td><img src="../image/mingyun.jpg" width="130" height="200" alt=""><br/>
+                <a href="https://book.douban.com/subject/27081847/" target="_blank">命运规划局</a><br/>菲利普·迪克
+            </td>
+            <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
+            <td><img src="../image/sea.jpg" width="130" height="200" alt=""><br/>
+                <a href="https://book.douban.com/subject/27117515/" target="_blank">海伯利安四部曲</a><br/>丹•西蒙斯
+            </td>
+            <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
+        </tr>
+        </tbody>
+    </table>
+</div>
 <!-- 底部栏 -->
 <div class="footer">
     <h2>
