--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
     <link href="css/style.css" rel="stylesheet" type="text/css">
 </head>
 
+<STYLE TYPE="text/css">
+    @font-face {
+        font-family: SmileySans-Oblique;
+        src: url("字体/SmileySans-Oblique.otf.woff2");
+    }
+</STYLE>
+
 <body>
 <!-- 顶部图片 -->
 <div class="header">
@@ -26,35 +33,37 @@
     <li><a href="html/hist.html">历史专区</a></li>
     <li><a href="html/sci.html">科幻专区</a></li>
     <li><a href="html/fantasy.html">奇幻专区</a></li>
-    <li><a href="html/classify.html">作品分类</a></li>
 </ul>
 <!-- 主页俳句 -->
 <div class="paijuMain">
-    <div class="paiju">
-        <h2>︿<br>绝美诗词<br> ﹀</h2>
-        <ul id="paiju">
-            <li>
-                <div>人生若只如初见<br>何事秋风悲画扇<br><span>纳兰性德《木兰花》
-                        </span></div>
-            </li>
-            <li>
-                <div>问君能有几多愁<br>恰似一江春水向东流<br><span>李煜《虞美人》
-                        </span></div>
-            </li>
-        </ul>
-    </div>
-    <!-- 网站介绍 -->
-    <div class="jieshao">
-        <div id="dialog">
-            <div class="Say">
-                (◕‿◕✿)欢迎来到M36文学站！<br>很高兴有缘与您相遇ღ<br>
-                如果快乐是一种本领的话，那我希望你是那个最厉害的人(♥ó㉨ò)ﾉ♡
+    <!-- 字体 -->
+    <div style=font-family:SmileySans-Oblique>
+        <div class="paiju">
+            <h2>︿<br>绝美诗词<br> ﹀</h2>
+            <ul id="paiju">
+                <li>
+                    <div>人生若只如初见<br>何事秋风悲画扇<br><span>纳兰性德《木兰花》
+                            </span></div>
+                </li>
+                <li>
+                    <div>问君能有几多愁<br>恰似一江春水向东流<br><span>李煜《虞美人》
+                            </span></div>
+                </li>
+            </ul>
+        </div>
+        <!-- 网站介绍 -->
+        <div class="jieshao">
+            <div id="dialog">
+                <div class="Say">
+                    (◕‿◕✿)欢迎来到M36文学站！<br>很高兴有缘与您相遇ღ<br>
+                    如果快乐是一种本领的话，那我希望你是那个最厉害的人(♥ó㉨ò)ﾉ♡
+                </div>
             </div>
         </div>
-    </div>
-    <!-- logo图片 -->
-    <div class="logo">
-        <img src=image/Hutao.png width="101" height="100">
+        <!-- logo图片 -->
+        <div class="logo">
+            <img src=image/Hutao.png width="101" height="100">
+        </div>
     </div>
 </div>
 <!-- 主页图书展示 -->
@@ -93,6 +102,7 @@
         M36 文学网 Literature|Cultivate|Learn
     </h2>
 </div>
+
 </body>
 
 </html>
