--- a/html/hot/blood.html
+++ b/html/hot/blood.html
@@ -23,7 +23,7 @@
     <li><a href="../../html/hist.html">历史专区</a></li>
     <li><a href="../../html/sci.html">科幻专区</a></li>
     <li><a href="../../html/fantasy.html">奇幻专区</a></li>
-    <li><a href="../../html/classify.html">作品分类</a></li>
+
 </ul>
 <hr color="white">
 <div class="row">
@@ -57,7 +57,8 @@
         <!-- 书籍简介 -->
         <div>
             <span class="pl">作者:</span>
-            <a href="https://book.douban.com/author/4503668/">
+            <a href="https://baike.baidu.com/item/%E4%BD%99%E5%8D%8E/6935?fromModule=lemma_search-box"
+               style="text-decoration:none" target="_blank">
                 余华</a>
             <br>
             <span class="pl">出版社:</span>
